// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractInlineFields (a::b::c) (a::f::d) 1`] = `
Array [
  Object {
    "chunks": Array [
      "a",
      "b",
      "c",
    ],
    "raw": "(a::b::c)",
  },
  Object {
    "chunks": Array [
      "a",
      "f",
      "d",
    ],
    "raw": "(a::f::d)",
  },
]
`;

exports[`extractInlineFields **Rating**:: 6 1`] = `
Array [
  Object {
    "chunks": Array [
      "**Rating**",
      " 6",
    ],
    "raw": "**Rating**:: 6",
  },
]
`;

exports[`extractInlineFields **Thoughts**:: It was decent. 1`] = `
Array [
  Object {
    "chunks": Array [
      "**Thoughts**",
      " It was decent.",
    ],
    "raw": "**Thoughts**:: It was decent.",
  },
]
`;

exports[`extractInlineFields [mood:: okay] | [length:: 2 hours] 1`] = `
Array [
  Object {
    "chunks": Array [
      "mood",
      " okay",
    ],
    "raw": "[mood:: okay]",
  },
  Object {
    "chunks": Array [
      "length",
      " 2 hours",
    ],
    "raw": "[length:: 2 hours]",
  },
]
`;

exports[`extractInlineFields [subject :: mood:: okay] | [subject :: length:: 2 hours] 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " mood",
      " okay",
    ],
    "raw": "[subject :: mood:: okay]",
  },
  Object {
    "chunks": Array [
      "subject ",
      " length",
      " 2 hours",
    ],
    "raw": "[subject :: length:: 2 hours]",
  },
]
`;

exports[`extractInlineFields No inline fields 1`] = `
Array [
  Object {
    "chunks": Array [
      "No inline fields",
    ],
    "raw": "No inline fields",
  },
]
`;

exports[`extractInlineFields Too :: many :: inline :: fields  1`] = `
Array [
  Object {
    "chunks": Array [
      "Too ",
      " many ",
      " inline ",
      " fields ",
    ],
    "raw": "Too :: many :: inline :: fields ",
  },
]
`;

exports[`extractInlineFields inline :: field 1`] = `
Array [
  Object {
    "chunks": Array [
      "inline ",
      " field",
    ],
    "raw": "inline :: field",
  },
]
`;

exports[`extractInlineFields nested ( inline :: field ) 1`] = `
Array [
  Object {
    "chunks": Array [
      " inline ",
      " field ",
    ],
    "raw": "( inline :: field )",
  },
]
`;

exports[`extractInlineFields nested ( subject :: inline :: field ) 1`] = `
Array [
  Object {
    "chunks": Array [
      " subject ",
      " inline ",
      " field ",
    ],
    "raw": "( subject :: inline :: field )",
  },
]
`;

exports[`extractInlineFields subject :: **Rating**:: 6 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " **Rating**",
      " 6",
    ],
    "raw": "subject :: **Rating**:: 6",
  },
]
`;

exports[`extractInlineFields subject :: **Thoughts**:: It was decent. 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " **Thoughts**",
      " It was decent.",
    ],
    "raw": "subject :: **Thoughts**:: It was decent.",
  },
]
`;

exports[`extractInlineFields subject :: inline :: field 1`] = `
Array [
  Object {
    "chunks": Array [
      "subject ",
      " inline ",
      " field",
    ],
    "raw": "subject :: inline :: field",
  },
]
`;

exports[`removeInlineFields (a::b::c) (a::f::d) 1`] = `" "`;

exports[`removeInlineFields **Rating**:: 6 1`] = `""`;

exports[`removeInlineFields **Thoughts**:: It was decent. 1`] = `""`;

exports[`removeInlineFields [mood:: okay] | [length:: 2 hours] 1`] = `" | "`;

exports[`removeInlineFields [subject :: mood:: okay] | [subject :: length:: 2 hours] 1`] = `" | "`;

exports[`removeInlineFields No inline fields 1`] = `"No inline fields"`;

exports[`removeInlineFields Too :: many :: inline :: fields  1`] = `""`;

exports[`removeInlineFields inline :: field 1`] = `""`;

exports[`removeInlineFields nested ( inline :: field ) 1`] = `"nested "`;

exports[`removeInlineFields nested ( subject :: inline :: field ) 1`] = `"nested "`;

exports[`removeInlineFields subject :: **Rating**:: 6 1`] = `""`;

exports[`removeInlineFields subject :: **Thoughts**:: It was decent. 1`] = `""`;

exports[`removeInlineFields subject :: inline :: field 1`] = `""`;
